--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,7 @@
 language: cpp
 compiler:
-    - gcc
     - clang
+    - gcc
 dist: xenial
 addons:
     apt:
@@ -12,6 +12,6 @@ addons:
 
 before_install:
     - pip3 install -U setuptools
-    - pip3 install -U online-judge-tools=='6.*'
+    - pip3 install -U online-judge-tools
 script:
-    - ./test/test.sh
+    - bash test.sh
