--- a/.travis.yml
+++ b/.travis.yml
@@ -12,6 +12,6 @@ addons:
 
 before_install:
     - pip3 install -U setuptools
-    - pip3 install -U online-judge-tools
+    - pip3 install -U online-judge-tools=='6.*'
 script:
     - bash ./test/test.sh
